[package]
name = "rust-cbm1520"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
g-code = "0.3.6"
roxmltree = "0.19.0"
svg2gcode = "0.1.4"
svgtypes = "0.12.0"

[build-dependencies]
bindgen = "0.65"
